--- a/ruoyi-admin/src/main/resources/templates/busi/borrow/borrow.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/borrow/borrow.html
@@ -47,7 +47,7 @@
                 </form>
             </div>
 
-            <div class="btn-group-sm" id="toolbar" role="group">
+            <!--<div class="btn-group-sm" id="toolbar" role="group">
                 <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="busi:borrow:add">
                     <i class="fa fa-plus"></i> 添加
                 </a>
@@ -60,7 +60,7 @@
                 <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="busi:borrow:export">
                     <i class="fa fa-download"></i> 导出
                 </a>
-            </div>
+            </div>-->
             <div class="col-sm-12 select-table table-striped">
                 <table id="bootstrap-table"></table>
             </div>
@@ -68,8 +68,8 @@
     </div>
     <th:block th:include="include :: footer" />
     <script th:inline="javascript">
-        var editFlag = [[${@permission.hasPermi('busi:borrow:edit')}]];
-        var removeFlag = [[${@permission.hasPermi('busi:borrow:remove')}]];
+        var extendFlag = [[${@permission.hasPermi('busi:borrow:extend')}]];
+        var returnFlag = [[${@permission.hasPermi('busi:borrow:return')}]];
         var stateDatas = [[${@dict.getType('busi_borrow_state')}]];
         var prefix = ctx + "busi/borrow";
 
@@ -134,14 +134,28 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>续借</a> ');
-                        actions.push('<a class="btn btn-warning btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>还书</a>');
+                        actions.push('<a class="btn btn-success btn-xs ' + extendFlag + '" href="javascript:void(0)" onclick="extend(\'' + row.id + '\')"><i class="fa fa-edit"></i>续借</a> ');
+                        actions.push('<a class="btn btn-warning btn-xs ' + returnFlag + '" href="javascript:void(0)" onclick="returnBook(\'' + row.id + '\')"><i class="fa fa-remove"></i>还书</a>');
                         return actions.join('');
                     }
                 }]
             };
             $.table.init(options);
         });
+        function extend(borrowId) {
+            $.modal.confirm("确定要续期吗？", function() {
+                var data = { "id": borrowId };
+                // $.operate.get(ctx+"busi/preBorrow/add/"+ bookId);
+                $.operate.post(prefix+"/extend", data);
+            })
+        }
+        function returnBook(borrowId) {
+            $.modal.confirm("确定要还书吗？", function() {
+                var data = { "id": borrowId };
+                // $.operate.get(ctx+"busi/preBorrow/add/"+ bookId);
+                $.operate.post(prefix+"/return", data);
+            })
+        }
     </script>
 </body>
 </html>
