--- a/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/bookselect.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/bookselect.html
@@ -31,10 +31,11 @@
                             </li>
                             <li>
                                 <label>图书馆：</label>
-                                <select name="deptId" th:with="depts=${@iSysDeptService.selectDeptChildenList('101')}">
+                                <!--<select name="deptId" th:with="depts=${@iSysDeptService.selectDeptChildenList('101')}">-->
+                                <select name="deptId" th:with="depts=${@busiBookBaseinfoController.getBookListDepts('100')}">
                                     <option value="">所有</option>user.avatar
-<!--                                    <option th:if="${user.deptId}==${dept.deptId}" selected = "selected" th:each="dept : ${depts}" th:text="${dept.deptName}" th:value="${dept.deptId}"></option>-->
-                                    <option th:each="dept : ${depts}" th:text="${dept.deptName}" th:value="${dept.deptId}"></option>
+                                    <option th:if="${dept.select}==true" selected = "selected" th:each="dept : ${depts}" th:text="${dept.deptName}" th:value="${dept.deptId}"></option>
+                                    <option th:if="${dept.select}!=true" th:each="dept : ${depts}" th:text="${dept.deptName}" th:value="${dept.deptId}"></option>
                                 </select>
                             </li>
                             <!--<li>
@@ -79,7 +80,7 @@
 
         $(function() {
             var options = {
-                url: prefix + "/list",
+                url: prefix + "/listselect",
                 createUrl: prefix + "/add",
                 updateUrl: prefix + "/edit/{id}",
                 detailUrl: prefix + "/detail/{id}",
@@ -144,6 +145,7 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
+
                         actions.push('<a class="btn btn-warning btn-xs ' + detailFlag + '" href="javascript:void(0)" onclick="$.operate.detail(\'' + row.id + '\')"><i class="fa fa-search"></i>详细</a> ');
                         actions.push('<a class="btn btn-primary btn-xs ' + borrowFlag + '" href="javascript:void(0)" onclick="borrow(\'' + row.id + '\')" ><i class="fa fa-anchor"></i>借阅</a> ');
                         actions.push('<a class="btn btn-primary btn-xs ' + preBorrowFlag + '" href="javascript:void(0)" onclick="preBorrow(\'' + row.id + '\')" ><i class="fa fa-anchor"></i>预约</a> ');
@@ -163,8 +165,23 @@
             })
         }
         function borrow(bookId) {
-            var borrowUrl=ctx + "busi/borrow/add/"+bookId;
-            $.modal.open("借阅新增",borrowUrl);
+            var checkUrl=ctx + "busi/borrow/checkDept/"+bookId;
+            var config = {
+                url: checkUrl,
+                type: "get",
+                dataType: "json",
+                data: "",
+                success: function(result) {
+                    if (result.code == web_status.SUCCESS) {
+                        var borrowUrl=ctx + "busi/borrow/add/"+bookId;
+                        $.modal.open("借阅新增",borrowUrl);
+                    }else {
+                        $.operate.successCallback(result);
+                    }
+                }
+            };
+            $.ajax(config);
+
             // $.modal.confirm("确定要借阅吗？", function() {
             //     var data = { "bookId": bookId };
             //     // $.operate.get(ctx+"busi/preBorrow/add/"+ bookId);
