--- a/ruoyi-admin/src/main/resources/templates/system/user/profile/profile.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/profile/profile.html
@@ -30,6 +30,7 @@
                         </li>
                         <li class="list-group-item" th:if="${user.dept?.deptName != null}"><i class="fa fa-group"></i>
                             <b  class="font-noraml">所属部门：</b>
+                            <!--<p class="pull-right" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;width:120px;">[[${user.dept?.deptName}]] / [[${#strings.defaultString(postGroup,'无岗位')}]]</p>-->
                             <p class="pull-right" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;width:120px;">[[${user.dept?.deptName}]] / [[${#strings.defaultString(postGroup,'无岗位')}]]</p>
                         </li>
                         <li class="list-group-item"><i class="fa fa-envelope-o"></i>
@@ -92,6 +93,30 @@
 												<label for="radio2">女</label>
 											</div>
                                         </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <div class="form-group">
+                                                <label class="col-sm-4 control-label is-required">是否缴纳押金：</label>
+                                                <div class="col-sm-8">
+                                                    <input name="userName" readonly="true" placeholder="请输入用户名称" value="未缴纳" class="form-control" type="text" maxlength="30" required>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-6">
+                                            <div class="form-group">
+                                                <div class="col-sm-8">
+                                                    <button type="button" class="btn btn-info btn-sm" onclick="payDepositQrCode()">缴纳押金</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!--<label class="col-sm-2 control-label">是否缴纳押金：</label>
+
+                                        <div class="col-sm-5">
+                                            <input name="userName" value="未缴纳" class="form-control" type="text" maxlength="30" readonly="true">
+                                            <input type="button" class="btn btn-info btn-xs" value="缴纳押金"/>
+                                        </div>-->
                                     </div>
                                     <div class="form-group">
                                         <div class="col-sm-offset-2 col-sm-10">
@@ -245,7 +270,11 @@
 	        	$.operate.saveModal(ctx + "system/user/profile/update", $('#form-user-edit').serialize());
 	        }
 	    }
-	    
+
+	    function payDepositQrCode(){
+		    var url=ctx+"busi/bill/payDepositQrCode"
+            $.modal.open("支付二维码",url);
+        }
 	    /*用户管理-修改密码*/
 	    $("#form-user-resetPwd").validate({
 	    	onkeyup: false,
