--- a/ruoyi-admin/src/main/resources/templates/busi/bill/qrCode.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bill/qrCode.html
@@ -6,13 +6,16 @@
 </head>
 <body class="white-bg">
 <div class="wrapper wrapper-content animated fadeInRight ibox-content">
+    <div id="msg1">缴费成功后请关闭窗口，并刷新页面</div>
     <div id="msg"></div>
     <img src="" id="qrCode">
+    <div id="result"></div>
 </div>
 <th:block th:include="include :: footer" />
 <th:block th:include="include :: datetimepicker-js" />
 <script th:inline="javascript">
-    var url = ctx + "busi/bill/payDepositQrCode"
+    var url = ctx + "busi/bill/payDepositQrCode";
+    var interval;
     var config = {
         url: url,
         type: "post",
@@ -21,13 +24,31 @@
         success: function(result) {
             if (result.code == web_status.SUCCESS) {
                 $("#qrCode").attr("src",result.msg);
+                var interval=self.setInterval('check()',2000);
+
             }else {
                 // $.operate.successCallback(result);
-                $("#qrCode").attr("msg",result.msg);
+                $("#msg").html(result.msg);
             }
         }
     };
     $.ajax(config);
+
+    function check(interval){
+        var url = ctx + "busi/bill/checkPayDepositResult";
+        var config = {
+            url: url,
+            type: "post",
+            dataType: "json",
+            data: {},
+            success: function(result) {
+                if (result.code == web_status.SUCCESS) {
+                    $("#result").html(result.msg);
+                }
+            }
+        };
+        $.ajax(config);
+    }
 </script>
 </body>
 </html>
