--- a/ruoyi-admin/src/main/resources/templates/system/user/profile/profile.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/profile/profile.html
@@ -31,7 +31,7 @@
                         <li class="list-group-item" th:if="${user.dept?.deptName != null}"><i class="fa fa-group"></i>
                             <b  class="font-noraml">所属部门：</b>
                             <!--<p class="pull-right" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;width:120px;">[[${user.dept?.deptName}]] / [[${#strings.defaultString(postGroup,'无岗位')}]]</p>-->
-                            <p class="pull-right" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;width:120px;">[[${user.dept?.deptName}]] / [[${#strings.defaultString(postGroup,'无岗位')}]]</p>
+                            <p class="pull-right" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;width:120px;">[[${user.dept?.deptName}]]</p>
                         </li>
                         <li class="list-group-item"><i class="fa fa-envelope-o"></i>
                             <b  class="font-noraml">邮箱地址：</b>
@@ -99,7 +99,9 @@
                                             <div class="form-group">
                                                 <label class="col-sm-4 control-label is-required">是否缴纳押金：</label>
                                                 <div class="col-sm-8">
-                                                    <input name="userName" readonly="true" placeholder="请输入用户名称" value="未缴纳" class="form-control" type="text" maxlength="30" required>
+                                                    <!--<input  th:value="${@dict.getLabel('sys_user_deposit',user.deposit)}" readonly="true" class="form-control" type="text" maxlength="30" required>-->
+                                                    <input  th:if="${user.deposit}==0" readonly="true" value="未缴纳" class="form-control" type="text" maxlength="30" required>
+                                                    <input  th:if="${user.deposit}!=0" readonly="true" value="已缴纳" class="form-control" type="text" maxlength="30" required>
                                                 </div>
                                             </div>
                                         </div>
@@ -107,7 +109,8 @@
                                         <div class="col-sm-6">
                                             <div class="form-group">
                                                 <div class="col-sm-8">
-                                                    <button type="button" class="btn btn-info btn-sm" onclick="payDepositQrCode()">缴纳押金</button>
+                                                    <button th:if="${user.deposit}==0" type="button" class="btn btn-info btn-sm" onclick="payDepositQrCode()">缴纳押金</button>
+                                                    <button th:if="${user.deposit}!=0" type="button" class="btn btn-info btn-sm" onclick="returnDeposit()">退押金</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -275,6 +278,16 @@
 		    var url=ctx+"busi/bill/payDepositQrCode"
             $.modal.open("支付二维码",url);
         }
+
+
+        function returnDeposit(){
+            $.modal.confirm("确定要退押金吗？", function() {
+                var url=ctx+"busi/bill/returnDeposit"
+                $.operate.post(url, {});
+            })
+
+        }
+
 	    /*用户管理-修改密码*/
 	    $("#form-user-resetPwd").validate({
 	    	onkeyup: false,
