--- a/ruoyi-admin/src/main/resources/templates/busi/bill/bill.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bill/bill.html
@@ -10,36 +10,36 @@
                 <form id="formId">
                     <div class="select-list">
                         <ul>
-                            <li>
+                           <!-- <li>
                                 <label>图书编码：</label>
                                 <input type="text" name="bookId"/>
-                            </li>
-                            <li>
+                            </li>-->
+                            <!--<li>
                                 <label>金额：</label>
                                 <input type="text" name="money"/>
-                            </li>
+                            </li>-->
                             <li>
-                                <label>账单类型：0押金、1损坏赔偿、2丢失赔偿、3超时赔偿：</label>
+                                <label>账单类型：</label>
                                 <select name="billType" th:with="type=${@dict.getType('busi_bill_type')}">
                                     <option value="">所有</option>
                                     <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
                                 </select>
                             </li>
                             <li>
-                                <label>账单标识：0-未支付 1-现金 2-支付宝：</label>
+                                <label>账单标识：</label>
                                 <select name="billSign" th:with="type=${@dict.getType('busi_bill_sign')}">
                                     <option value="">所有</option>
                                     <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
                                 </select>
                             </li>
-                            <li>
+                            <!--<li>
                                 <label>创建时间：</label>
                                 <input type="text" class="time-input" placeholder="请选择创建时间" name="createTime"/>
                             </li>
                             <li>
                                 <label>支付时间：</label>
                                 <input type="text" class="time-input" placeholder="请选择支付时间" name="payTime"/>
-                            </li>
+                            </li>-->
                             <li>
                                 <a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
                                 <a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
@@ -106,14 +106,14 @@
                 },
                 {
                     field: 'billType',
-                    title: '账单类型：0押金、1损坏赔偿、2丢失赔偿、3超时赔偿',
+                    title: '账单类型：',
                     formatter: function(value, row, index) {
                        return $.table.selectDictLabel(billTypeDatas, value);
                     }
                 },
                 {
                     field: 'billSign',
-                    title: '账单标识：0-未支付 1-现金 2-支付宝',
+                    title: '账单标识：',
                     formatter: function(value, row, index) {
                        return $.table.selectDictLabel(billSignDatas, value);
                     }
@@ -135,13 +135,21 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
-                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
+                        console.log(row);
+                        if(row.billSign=0){
+                            actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="payPenaltyQrCode(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+                        }
+                        /*actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');*/
                         return actions.join('');
                     }
                 }]
             };
             $.table.init(options);
+            function payPenaltyQrCode(){
+                var url=ctx+"busi/bill/payPenaltyQrCode"
+                $.modal.open("支付二维码",url);
+            }
         });
     </script>
 </body>
